--- a/biological-machines-homeworld/locale/en/strings.cfg
+++ b/biological-machines-homeworld/locale/en/strings.cfg
@@ -22,11 +22,11 @@ bm-interstellar-energy-link=Interstellar energy link
 
 [space-location-name]
 bm-dyson-sphere=Dyson sphere construction platform
-bm-new-system=New world
+bm-new-system=New worlds
 
 [space-location-description]
 bm-dyson-sphere=An incomplete but functional dyson sphere. Deposit construction materials (in green box) for credits (in gold box) to buy other materials from the market.
-bm-new-system=One of many uncolonized worlds identified by the homeworld. Remotely send a space platform with a suspended clone to the system to establish a colony. WARNING: The platform will be removed and credits will be paid out on the dyson sphere construction platform.
+bm-new-system=Many uncolonized worlds identified by the homeworld. Remotely send a space platform with a suspended clone to the system to establish a colony. WARNING: The platform will be removed and credits will be paid out on the dyson sphere construction platform.
 
 [recipe-name]
 bm-homeworld-market=Homeworld market
