--- a/biological-machines-planet-wit/locale/en/strings.cfg
+++ b/biological-machines-planet-wit/locale/en/strings.cfg
@@ -71,6 +71,9 @@ bm-wit-crater-cliff=Wit crater cliff
 bm-electric-boiler=Electric boiler
 bm-advanced-accumulator=Advanced accumulator
 
+[entity-description]
+bm-advanced-accumulator=Has massive capacity and throughput but also has a significant passive drain
+
 [technology-name]
 bm-interplanetary-travel=Interplanetary travel
 bm-advanced-solar-energy=Advanced solar energy
