Mostly compatability with some minor bugfixes

--- a/biological-machines-planet-balack/locale/en/balack-x-promethium-belts.cfg
+++ b/biological-machines-planet-balack/locale/en/balack-x-promethium-belts.cfg
@@ -3,3 +3,15 @@ bm-promethium-belts-override=Promethium Belts Override
 
 [mod-setting-description]
 bm-promethium-belts-override=Changes tech and recipes.
+
+[entity-name]
+aai-promethium-loader=Promethium loader
+
+[item-name]
+aai-promethium-loader=Promethium loader
+
+[recipe-name]
+aai-promethium-loader=Promethium loader
+
+[technology-name]
+aai-promethium-loader=Promethium loader
