Fixes compat between reinforced walls and Water-Friendly Walls. Tweaks berry spawn. Tweaks food effects.

--- a/biological-machines-hunger/locale/en/strings.cfg
+++ b/biological-machines-hunger/locale/en/strings.cfg
@@ -26,13 +26,15 @@ bm-artificial-organs=Artificial organs
 [item-description]
 yumako=
 yumako-mash=
-jellynut=
-jelly=
-bioflux=
+jellynut=Can be eaten but applies a small movement speed debuff
+jelly=Can be eaten but applies a small movement speed debuff
+bioflux=Applies a small passive movement speed buff when eaten
+bm-fluroflux=Applies a moderate passive movement speed buff when eaten
 nutrients=Can be eaten but applies a small movement speed debuff
 bm-nutrient-paste=Can be eaten but applies a small movement speed debuff
 bm-berry=Applies a small passive movement speed buff when eaten
 bm-berry-paste=Applies a small passive movement speed buff when eaten
+bm-nutrient-slurry=Applies a small passive movement speed buff when eaten
 bm-fortified-nutrient-slurry=Applies a moderate passive movement speed buff when eaten
 raw-fish=Applies a small passive health regen buff when eaten
 bm-canned-fish=Applies a small passive health regen buff when eaten
