--- a/biological-machines-core/locale/en/strings.cfg
+++ b/biological-machines-core/locale/en/strings.cfg
@@ -52,14 +52,19 @@ bm-scrapyard=Scrapyard
 bm-offshore-dump=Offshore dump
 bm-reinforced-wall=Reinforced wall
 
+[autoplace-control-names]
+berries=Berries
+
 [mod-setting-name]
 bm-bot-start-standalone=Bot start standalone
 bm-alternative-nutrients-standalone=Alternative nutrients standalone
 bm-scrapyard-standalone=Scrapyard standalone
 bm-reinforced-wall-standalone=Reinforced wall standalone
+bm-berry-yield=Berry yield
 
 [mod-setting-description]
 bm-bot-start-standalone=Copied from and incompatible with Survival Gear by GotLag. Compatible with atan crash site.
 bm-alternative-nutrients-standalone=Adds source of nutrients to early game nauvis and vulcanus/gleba.
 bm-scrapyard-standalone=Adds an early game recycler which consumes no power, is less space efficient and outputs a lot of polution.
 bm-reinforced-wall-standalone=Adds a more durable wall made from refined concrete and tungsten plate.
+bm-berry-yield=Berries per bush when alternative nutrients is active
